fixed overflow

--- a/src/style.css
+++ b/src/style.css
@@ -62,6 +62,10 @@ body {
   transition: all 0.2s;
 }
 
+.btn-primary:disabled {
+  background-color: var(--grey-darker);
+}
+
 .btn-primary:focus {
   background-color: var(--primary);
   border-color: var(--primary);
